<?xml version="1.0"?>
<package>
 <name>ps3controller</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="olima_84@yahoo.com">Oscar Lima</author>
 <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>joy</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>sensor_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>

 <run_depend>joy</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>geometry_msgs</run_depend>

</package>
